[gd_scene load_steps=7 format=3 uid="uid://cwyjdx3wbgevy"]

[ext_resource type="Script" path="res://priesas/enemy.gd" id="1_uoxvj"]
[ext_resource type="Script" path="res://DemageBox/demage_box.gd" id="7_dayur"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ppgyy"]
radius = 9.0
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnl14"]
size = Vector2(25, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_5s8op"]

[sub_resource type="CircleShape2D" id="CircleShape2D_krj0w"]

[node name="enemy" type="CharacterBody2D"]
position = Vector2(-8, 0)
collision_layer = 4
script = ExtResource("1_uoxvj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(6, -16)
shape = SubResource("CapsuleShape2D_ppgyy")

[node name="AttackDirection" type="Node2D" parent="."]
position = Vector2(6, -15)

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
position = Vector2(5, -10)
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(-21.5, 11.5)
shape = SubResource("RectangleShape2D_cnl14")

[node name="DemageBox" type="Node2D" parent="AttackDirection"]
position = Vector2(-22, 1)
script = ExtResource("7_dayur")

[node name="HurtBox" type="Area2D" parent="AttackDirection/DemageBox"]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/DemageBox/HurtBox"]
position = Vector2(21, -1)
shape = SubResource("CircleShape2D_5s8op")

[node name="HitBox" type="Area2D" parent="AttackDirection/DemageBox"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/DemageBox/HitBox"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_krj0w")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DemageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
